# Orderly

Server/: .gitignore  pyproject.toml
Server/apps/accounts/: models.py  serializers.py  urls.py  views.py
Server/apps/accounts/migrations/: 0002_sellerprofile.py
Server/apps/products/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
Server/apps/support/: models.py
Server/apps/users/: models.py  utils.py
Server/core/: asgi.py  settings.py  urls.py  wsgi.py
Server/core/settings/: __init__.py  base.py  local.py  production.py
client/: package-lock.json
